Added deployment in circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,14 @@
 machine:
-  services:
-    - docker
+    services:
+        - docker
 
 test:
-  override:
-    - docker-compose up -d
-    - mocha
+    override:
+        - docker-compose up -d
+        - mocha
+
+deployment:
+    hub:
+        branch: dev
+        commands:
+            - $DEPLOY
